compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__unqualified_using_private_function.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 187
expression: "import one.{two}\n\npub fn main() {\n  two\n}"
---
error: Unknown module field
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{two}
  │             ^^^

The module `one` does not have a `two` field.

